--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,24 @@
 spring:
   application:
     name: ingestor
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring,json.add.type.headers: false
+
+server:
+  port: 8080
+
+api:
+  binance:
+    base-url: https://api.binance.com
+  ingestion:
+    symbol: ETHUSDC
+    interval: 1h
+    limit: 150
+    pool-seconds: 60
+  kafka:
+    topic: market.candles
